# claude-skills-django-

./: README.md  manage.py  pyproject.toml
apis/accounts/: apps.py  urls.py
apis/accounts/controllers/: __init__.py  auth_controllers.py
apis/accounts/serializers/: __init__.py  auth_serializers.py
apis/accounts/views/: __init__.py  auth_views.py
apis/commons/: base_permissions.py  error_codes.py
apis/commons/views/: __init__.py  base_views.py
apis/payments/: apps.py  urls.py
apis/payments/controllers/: __init__.py  payment_controllers.py
apis/payments/filters/: __init__.py  payment_filters.py
apis/payments/serializers/: __init__.py  payment_serializers.py
apis/payments/views/: __init__.py  payment_views.py
apis/products/: apps.py  urls.py
apis/products/controllers/: __init__.py  product_controllers.py
apis/products/docs/: product_docs.py
apis/products/filters/: __init__.py  product_filters.py
apis/products/serializers/: __init__.py  product_serializers.py
apis/products/views/: __init__.py  product_views.py
commons/: urls.py
commons/const/: choices.py
commons/utils/: env_utils.py
configs/: asgi.py  wsgi.py
configs/settings/: base.py  local.py  test.py
domains/accounts/: apps.py
domains/accounts/migrations/: 0001_initial.py
domains/accounts/models/: __init__.py  user_models.py  user_querysets.py
domains/accounts/services/: __init__.py  auth_services.py
domains/commons/: base_models.py  base_querysets.py  base_services.py
domains/payments/: apps.py
domains/payments/models/: __init__.py  (+2 more)
domains/products/: apps.py
(+9 files in other folders)
